test/CheckError/Move/MoveNonMovableTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
void moveObject(T object) {
	// CHECK: .loci:9:16: error: template arguments do not satisfy require predicate 'T : sized_type_t and T : movable_t<notag(T)>' of method 'move'
	// CHECK: .loci:9:16: note: because: method '__alignmask' not found
	// CHECK: .loci:9:16: error: return type 'T' of function call does not have a size
	unused_result move object;
}

// CHECK: 2 errors generated.
